Documentation/CFG.txt
CFG


Program →  D Program | ^ 

D → Code | Function | Koment 

Code → Statement Code | If Code | While Code | ^

Statement → Stmt Comment
Stmt → Variable | Input | Output | Return

Koment → Comment  | ^


Function →  kaam ID @ FuncT ( PL ) karo Koment Code kaam khatam Koment
FuncT -> khali | adad 
PL → ID @ adad MPL  | ^
MPL → | PL | ^


Variable → rakho ID  Type  R
Type → @ adad | ^
R → := Val | ^
Val → ID | Integer | Exp | chalao ID (PLF) 
PLF → ID MPLF | Integer MPLF | ^ 
MPLF → |  PLF |^
 


Input → lo   InputMsg  >> ID   
InputMsg → ^ | << String  

Output →  dekhao <<  OutVal MoreOut 
MoreOut → << OutVal MoreOut | ^
OutVal → String | Val 


Return-> wapis bhaijo Val



----------------

IF    →  agar ( Condition ) to phir karo Koment Code WG WP bas karo Koment
WG  →  warna agar Condition to phir Koment Code | ^
WP  →  warna phir Koment  Code | ^

Condition → Exp  RO  Exp  

Exp -> T - Exp | T + Exp | T
T-> L %  T | L /  T | L* T | L 
L-> ID | Integer | ( Exp )

While →  jab tak ( Condition ) karo Koment  Code bas karo Koment
